--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@coreui/react": "^5.0.0-alpha.3",
     "@emotion/react": "^11.11.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "prop-types": "^15.8.1",
     "react-awesome-reveal": "^4.2.5",
     "react-icons": "^4.11.0",
