--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@coreui/react": "^5.0.0-alpha.3",
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -19,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.16.0",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.0.8",
     "styled-system": "^5.1.5"
   },
