--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/react": "^11.11.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.8",
     "prop-types": "^15.8.1",
     "react-awesome-reveal": "^4.2.5",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.16.0",
@@ -33,5 +35,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
+  },
+  "react-dotenv": {
+    "whitelist": ["API_URL","API_LOCAL"]
   }
 }
