--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@emotion/react": "^11.11.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "keep-react": "^1.3.0",
+    "phosphor-react": "^1.4.1",
+    "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
     "react-awesome-reveal": "^4.2.5",
     "react-dotenv": "^0.1.3",
@@ -24,7 +28,8 @@
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.0.8",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -37,6 +42,9 @@
     "vite": "^4.4.5"
   },
   "react-dotenv": {
-    "whitelist": ["API_URL","API_LOCAL"]
+    "whitelist": [
+      "API_URL",
+      "API_LOCAL"
+    ]
   }
 }
