--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
     "react-awesome-reveal": "^4.2.5",
+    "react-cookie": "^7.1.4",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
