--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-cookie": "^7.1.4",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.4",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
