--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.0.8",
     "styled-system": "^5.1.5",
     "tailwindcss": "^3.4.3"
